# linkspage-demo

./: .env.example  .gitignore  .vercelignore  Anchor.toml  CODEX_HANDOFF.md  NOTES_FROM_CODEX.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
api/: index.py
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/p/[slug]/: page.tsx
app/play/: page.tsx
backend/: app.py  db.py  models.py  security.py  slug.py
backend/crash/: hash_chain.py  scheduler.py
backend/routes/: crash.py  pages.py
components/crash/: BetFeed.tsx  BetPanel.tsx  CrashChart.tsx  RecentRoundsTicker.tsx
components/editor/: AddLinkForm.tsx  LinkRow.tsx  LinksEditor.tsx  ProfileEditor.tsx  ThemePicker.tsx
components/preview/: Avatar.tsx  BioPage.tsx  LinkButton.tsx
components/share/: ExportPngButton.tsx  PublishButton.tsx  QrButton.tsx
components/ui/: dialog.tsx  select.tsx  sonner.tsx  switch.tsx
docs/plans/: 2026-04-19-link-in-bio-builder-plan.md
docs/specs/: 2026-04-19-crashgame-design.md  2026-04-19-link-in-bio-builder-design.md
lib/: api.ts  crash.ts  schema.ts  solana.tsx  store.ts  themes.ts  types.ts
migrations/: 0001_init.sql  0002_crash_tables.sql
programs/crashgame/: Cargo.toml  README.md
programs/crashgame/src/: lib.rs
tests/anchor/: crashgame.ts
tests/backend/: test_crash.py  test_models.py  test_pages.py
tests/backend/__snapshots__/: page.schema.json
