[package]
name = "crashgame"
version = "0.1.0"
description = "Provably-fair on-chain crash game (Aviator/Bustabit style) built with Anchor."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crashgame"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
